--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ivBird"
         android:layout_width="173dp"
         android:layout_height="141dp"
         app:layout_constraintBottom_toTopOf="@+id/button"
